- 경력 데이터 추가 - 스크롤 부분 개선 - 페이지 클릭 시 확대 기능 추가

--- a/css/main.css
+++ b/css/main.css
@@ -14,29 +14,28 @@
 }
 
 .container .wrap {
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
   overflow-x: auto;
   overflow-y: hidden;
-  justify-content: flex-start;
+  align-items: center;
   padding: 0 20px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.container .wrap::-webkit-scrollbar {
+  display: none;
 }
 
 .container .wrap .item {
-  width: 476px;
-}
-
-.container .wrap .item:nth-of-type(1) {
-  transform: translateX(0);
-}
-.container .wrap .item:nth-of-type(2) {
-  transform: translateX(0);
+  width: 15cm;
+  height: 29.7cm;
+  min-width: 15cm;
+  min-height: 29.7cm;
 }
 
 .career .company {
   font-size: 20px;
   margin-bottom: 20px;
+  font-weight: 500;
 }
 .career .date {
   font-size: 16px;
@@ -48,7 +47,7 @@
 }
 .description {
   margin-top: 20px;
-  border: 1px solid var(--DARK);
+  border: 1px solid #3F3F3F30;
   padding: 10px;
   border-radius: 5px;
   gap: 5px;
