--- a/css/page.css
+++ b/css/page.css
@@ -1,13 +1,17 @@
 .page {
+  transform-origin: center;
+  background-color: var(--WHITE);
+  box-shadow: 5px 5px 15px 0px #00000030;
+  overflow: hidden;
   width: 21cm;
   height: 29.7cm;
-  background-color: var(--WHITE);
-  transform: scale(0.6);
-  transform-origin: left center;
-  box-shadow: 5px 5px 15px 0px #00000030;
+  min-width: 21cm;
+  min-height: 29.7cm;
+  transform: scale(0.6) translateX(-25%);
+  cursor: pointer;
 }
 .page .bg {
-  opacity: 0.2;
+  opacity: 0.15;
 }
 .page .content {
   left: 0;
@@ -20,4 +24,13 @@
 }
 .page .page-no p {
   font-size: 10px;
+}
+
+.page.on {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%) scale(0.75);
+  cursor: default;
 }
