--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,8 @@
 }
 .description {
   margin-top: 20px;
-  border: 1px solid #3F3F3F30;
+  margin-bottom: 40px;
+  border: 1px solid var(--PRIMARY-50);
   padding: 10px;
   border-radius: 5px;
   gap: 5px;
@@ -55,7 +56,11 @@
 .description p {
   font-size: 16px;
   line-height: 22px;
-  text-indent: 3px;
+  text-indent: 5px;
+  margin-bottom: 10px;
+}
+.description p:last-of-type {
+  margin-bottom: 0;
 }
 
 
