--- a/css/page-1.css
+++ b/css/page-1.css
@@ -7,7 +7,7 @@
 #page1 .content .left .profile {
   width: 240px;
   height: 240px;
-  margin: 60px auto;
+  margin: 40px auto;
   padding: 4px;
   border-radius: 50%;
   border: 4px solid var(--PRIMARY);
@@ -49,6 +49,9 @@
 }
 #page1 .content .left .references  {
   gap: 25px;
+}
+#page1 .content .left .references p a {
+  color: inherit;
 }
 #page1 .content .left .references p,
 #page1 .content .left .contact p {
